--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "API for to do List",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src --extensions \".js,.ts\" --out-dir build --copy-files",
     "start": "node build/server.js",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
